--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Ray's Blog
-author: Rayxyz
+author: Ray
 email: rwthecoder@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Life, tech, and everything.
